ecmascript/parser/tests/test262-error-references/fail/6e736ba5cc38de01.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/6e736ba5cc38de01.js:1:1
  |
1 | '\x12  
  | ^^^^^^^

